tests/error/protocol_errors/field.err
Error: Unsupported (at $FILE:5:4)
  | 
3 | @guppy.protocol
4 | class MyProto:
5 |     id: int
  |     ^^^^^^^ fields are not supported in a protocol definition

Guppy compilation failed due to 1 previous error
